# minecraftOpenGLClone

./: CMakeLists.txt  InGameHUD.cpp  InGameHUD.h  block.cpp  camera.h  chunk.cpp  chunk.h  main.cpp  settings.cpp
include/glad/: glad.h
shaders/: Gay.frag  Gay.vert  Hud.vert
src/: glad.c
